# LearnOpenGL_execise

./: .ccls  .gitignore  README.md
Chapter1-GettingStarted/01-HelloTriangle/: CMakeLists.txt  CleanAndMake.bat  Run.bat
Chapter1-GettingStarted/01-HelloTriangle/src/: HelloTriangle-execise1.cpp  HelloTriangle-execise2.cpp  HelloTriangle-execise3.cpp  HelloTriangle.cpp
Chapter1-GettingStarted/02-HelloShaders/: CMakeLists.txt
Chapter1-GettingStarted/02-HelloShaders/shaders/: fragment.frag  vertex.vert
Chapter1-GettingStarted/02-HelloShaders/src/: HelloShaders.cpp  Shader.h
Chapter1-GettingStarted/04-Transform/: CMakeLists.txt
Chapter1-GettingStarted/04-Transform/shaders/: fragment.frag  fragment_execise1.frag  fragment_execise4.frag  vertex.vert
Chapter1-GettingStarted/04-Transform/src/: Textures.cpp
Chapter1-GettingStarted/05-Coodinates/: CMakeLists.txt
Chapter1-GettingStarted/05-Coodinates/shaders/: vertex.vert
Chapter1-GettingStarted/05-Coodinates/src/: Coordinates.cpp  Exercise01.cpp  Exercise02.cpp  Exercise03.cpp  MoreCubes.cpp
Chapter1-GettingStarted/06-Camera/: CMakeLists.txt
Chapter1-GettingStarted/06-Camera/src/: FreeCamera.cpp  OrbitCamera.cpp  RotateCamera.cpp  Shader.h
Chapter2-Lighting/02-BasicLighting/: CMakeLists.txt  imgui.ini
Chapter2-Lighting/02-BasicLighting/shaders/: fragment.frag  fragment_exercise3.frag  vertex_exercise3.vert
Chapter2-Lighting/02-BasicLighting/src/: BasicLighting.cpp  Camera.h  Exercise1.cpp  Exercise2.cpp  Exercise3.cpp
Chapter2-Lighting/03-Material/: CMakeLists.txt  imgui.ini
Chapter2-Lighting/03-Material/shaders/: fragment.frag  fragment_light.frag
Chapter2-Lighting/03-Material/src/: Material.cpp
Chapter2-Lighting/04-LightingMaps/: CMakeLists.txt
Chapter2-Lighting/04-LightingMaps/shaders/: fragment.frag  fragment_exercise4.frag
Chapter2-Lighting/04-LightingMaps/src/: Exercise4.cpp  LightingMaps.cpp
Chapter2-Lighting/05-LightCasters/: CMakeLists.txt  imgui.ini
Chapter2-Lighting/05-LightCasters/shaders/: fragment.frag  fragment_directional_light.frag  fragment_point_light.frag  fragment_spot_light.frag  fragment_spot_light_softedge.frag  spot_light.frag
Chapter2-Lighting/05-LightCasters/src/: Camera.h  DirectionalLight.cpp  LightCasters.cpp  PointLight.cpp  SoftEdge_SpotLight.cpp  SpotLight.cpp
Chapter2-Lighting/06-MultipleLights/: CMakeLists.txt  imgui.ini
Chapter2-Lighting/06-MultipleLights/shaders/: fragment_light.frag  fragment_multiple_lights.frag  vertex.vert
Chapter2-Lighting/06-MultipleLights/src/: MultipleLights.cpp  Shader.h
Chapter3-ModelLoading/: CMakeLists.txt  Camera.h  LearnOpenGLSolution.sln  LearnOpenGLSolution.vcxproj  LearnOpenGLSolution.vcxproj.filters  Mesh.h  main.cpp
Chapter3-ModelLoading/Shaders/: FragmentShader.frag  VertexShader.vert
Chapter3-ModelLoading/cmake/: FindGLFW3.cmake
Chapter3-ModelLoading/shaders/: fragment_multiple_lights.frag  fragment_simple.frag  vertex.vert
Chapter3-ModelLoading/src/: ImportModels.cpp  Model.h
Chapter4-Advanced/01-DepthTesting/: 01-DepthTesting.sln  01-DepthTesting.vcxproj  01-DepthTesting.vcxproj.filters  CMakeLists.txt  depth_testing.cpp
Chapter4-Advanced/01-DepthTesting/Shaders/: depth_testing.fs  depth_testing.vs
Chapter4-Advanced/01-DepthTesting/shaders/: depth_testing.frag
Chapter4-Advanced/01-DepthTesting/src/: DepthTesting.cpp
Chapter4-Advanced/02-StencilTesting/: 01-DepthTesting.vcxproj  01-DepthTesting.vcxproj.filters  CMakeLists.txt  glad.c  stencil_testing.cpp
Chapter4-Advanced/02-StencilTesting/Shaders/: SingleColor.fs  depth_testing.fs
Chapter4-Advanced/02-StencilTesting/shaders/: singlecolor.frag  singlecolor.vert  stencil_testing.frag  stencil_testing.vert
Chapter4-Advanced/02-StencilTesting/src/: Outline.cpp  ShowPartFrame.cpp  stb_loader.cpp
Chapter4-Advanced/03-Blending/: CMakeLists.txt
Chapter4-Advanced/03-Blending/Res/Shaders/: depth_testing.fs
Chapter4-Advanced/03-Blending/shaders/: Transparent.frag
Chapter4-Advanced/03-Blending/src/: AlphaClipping.cpp  Mesh.h  Shader.cpp  Transparent.cpp  blending.cpp
Chapter4-Advanced/04-Framebuffers/: CMakeLists.txt  CleanAndMake.bat
Chapter4-Advanced/04-Framebuffers/Res/Shaders/: core_blur.frag  core_edge_detection.frag  core_sharpen.frag  screen.frag  screen.fs  screen_grayscale.frag  screen_inverse.frag
Chapter4-Advanced/04-Framebuffers/src/: framebuffers.cpp
Chapter4-Advanced/05-Cubemaps/: CMakeLists.txt  CleanAndMake.bat
Chapter4-Advanced/05-Cubemaps/Res/Shaders/: exercise1.frag  exercise1.vert  refraction.frag  refraction.vert  regular.vs  skybox.frag
Chapter4-Advanced/05-Cubemaps/src/: Camera.h  Cubemaps.cpp  Exercise1.cpp  Mesh.h  Model.h  Refraction.cpp  Shader.h
Chapter4-Advanced/06-AdvancedGLSL/: CMakeLists.txt
Chapter4-Advanced/06-AdvancedGLSL/Res/Shaders/: frag2.frag  frag3.frag
Chapter4-Advanced/06-AdvancedGLSL/src/: Camera.h  UsingUniformBuffer.cpp
Chapter4-Advanced/07-GeometryShader/: CMakeLists.txt
Chapter4-Advanced/07-GeometryShader/src/: DrawHouse.cpp  ExplodeMesh.cpp  GeoShader.cpp  Shader.h  VisualizeNormal.cpp
Chapter4-Advanced/08-Instancing/: CMakeLists.txt
Chapter4-Advanced/08-Instancing/shaders/: asteroid_filed.frag  asteroid_filed.vert  instanced_array.frag  instanced_array.vert  main.frag  main.vert  planet.frag  planet.vert
Chapter4-Advanced/08-Instancing/src/: AsteroidField.cpp  Instanced_array.cpp  Instancing1.cpp  Mesh.h
Chapter4-Advanced/09-AntiAliasing/: CMakeLists.txt
Chapter4-Advanced/09-AntiAliasing/shaders/: basic.frag  main.vert
Chapter4-Advanced/09-AntiAliasing/src/: AntiAliasing1.cpp  EnableMSAA.cpp  OffscreenMSAA.cpp
Chapter4-Advanced/Refactorying_Linux/: CMakeLists.txt
Chapter4-Advanced/Refactorying_Linux/src/: Camera.h  Mesh.h  Model.h  Shader.cpp  Shader.h  blending.cpp  glad.c
Chapter5-AdvanedLighting/02-GammaCorrection/: CMakeLists.txt
Chapter5-AdvanedLighting/02-GammaCorrection/shaders/: blinn_phong.frag  vertex.vert
Chapter5-AdvanedLighting/03-ShadowMap/: CMakeLists.txt
Chapter5-AdvanedLighting/03-ShadowMap/src/: ShadowMapping.cpp
(+77 files in other folders)
